# AviQtl-Plus

./: .clang-tidy  .gitattributes  .gitignore  AviQtl 0.1.0 仕様書.md  AviQtl 0.1.0 移行手順書.md  BUILD.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  check.py  clean.py  count.py  iconjsmaker.py
.github/: README.md
.github/workflows/: analysis.yml  build.yml  release-linux-x86_64.yml  release-macos-arm64.yml  release-windows-x86_64.yml
core/include/: audio_decoder.hpp  aviqtl_context.hpp  compute_effect.hpp  compute_render_node.hpp  constants.hpp  document_model.hpp  effect_model.hpp  effect_registry.hpp  image_decoder.hpp  keyframe_utils.hpp  media_decoder.hpp  media_utils.hpp  package_manager.hpp  permission_manager.hpp  preset_manager.hpp  project_serializer.hpp  settings_manager.hpp  shader_compiler.hpp  version.hpp  video_decoder.hpp  video_encoder.hpp  video_frame_store.hpp
core/src/: audio_decoder.cpp  compute_effect.cpp  compute_render_node.cpp  document_model.cpp  effect_metadata_i18n.cpp  effect_registry.cpp  image_decoder.cpp  main.cpp  media_decoder.cpp  media_utils.cpp  package_manager.cpp  package_url_utils.hpp  permission_manager.cpp  preset_manager.cpp  project_serializer.cpp  settings_manager.cpp  shader_compiler.cpp  video_decoder.cpp  video_encoder.cpp  video_frame_provider.cpp  video_frame_store.cpp
docs/: CODE_QUALITY_AUDIT.md  DAILY_EDITING_WORKFLOW.md  LARGE_PROJECT_PERFORMANCE.md  OPERABILITY_TARGETS.md  RELEASE_CHECKLIST.md  TIMELINE_EDIT_TARGETS.md
docs/effects/: EFFECT_SCHEMA.md  schema.json
docs/plugins/: API_REFERENCE.md  DEVELOPER_GUIDE.md  PLUGIN_SYSTEM_DESIGN.md  USER_GUIDE.md
effect-packages/: README.md
effect-packages/advanced-blur/: README.md  manifest.json
effect-packages/advanced-blur/directional_blur/: DirectionalBlur.qml
effect-packages/advanced-blur/lens_blur/: LensBlur.qml  lensblur_compute.comp
effect-packages/advanced-blur/motion_blur/: MotionBlur.qml
effect-packages/advanced-blur/radial_blur/: RadialBlur.qml  radialblur_compute.comp
effect-packages/stylize-effects/: README.md  manifest.json
effect-packages/stylize-effects/chromatic_aberration/: chromatic_aberration.json
effect-packages/stylize-effects/emboss/: Emboss.qml  emboss.frag  emboss.json
effect-packages/stylize-effects/noise/: Noise.qml  noise.frag  noise.json
effect-packages/stylize-effects/pixelsorter/: pixelsorter.comp
effect-packages/stylize-effects/raster/: raster.json
effect-packages/transitions/: README.md  manifest.json
effect-packages/transitions/cross_fade/: CrossFade.qml  cross_fade.json
effect-packages/transitions/slide/: Slide.qml
effect-packages/transitions/wipe_circle/: WipeCircle.qml  wipe_circle.frag
effect-packages/weather-objects/: README.md  manifest.json
engine/: audio_mixer.cpp  audio_mixer.hpp
engine/plugin/: audio_plugin_chain.cpp  audio_plugin_chain.hpp  audio_plugin_host.hpp  audio_plugin_manager.cpp  audio_plugin_manager.hpp
engine/timeline/: bake_controller.cpp  ecs.hpp  ecs_system.cpp  keyframe_evaluator.cpp  keyframe_evaluator.hpp
examples/: README.md
examples/compute_blur/: ComputeBlur.qml  README.md  compute_blur.comp  compute_blur.json
examples/custom_object/: ColorChipObject.json  ColorChipObject.qml  README.md
examples/custom_transition/: README.md  ZoomTransition.qml  zoom_transition.json
examples/hello_mod/: README.md  main.lua  manifest.lua
examples/sepia_effect/: README.md  Sepia.qml  SepiaCompute.qml  sepia.comp  sepia.frag  sepia.json  sepia_compute.json
examples/stylize_effect/: Posterize.qml  README.md  posterize.frag  posterize.json
i18n/: AviQtl_en_US.ts  AviQtl_ja_JP.ts  AviQtl_zh_CN.ts
i18n/README/: README.ja.md  README.zh_CN.md
plugins/example_animation/: main.lua  manifest.lua
plugins/example_clip_ops/: main.lua  manifest.lua
plugins/example_project_info/: main.lua  manifest.lua
plugins/example_transport/: main.lua  manifest.lua
rendering/include/: filament_canvas.hpp
rendering/src/: filament_canvas.cpp
repos/: AviQtl.json  catalog.json  repo.json
repos/detail/: com.example.glow-effect.json  com.example.vhs-effect.json
scripting/: lua_host.cpp  lua_host.hpp  mod_engine.cpp  mod_engine.hpp  script_params.cpp  script_params.hpp
tests/: CMakeLists.txt  test_audio_decoder.cpp  test_audio_plugin_chain.cpp  test_audio_plugin_scan.cpp  test_bake_controller.cpp  test_build_version.py  test_clip_by_upper_object.cpp  test_daily_editing_workflow.cpp  test_dense_component_map.cpp  test_document_model.cpp  test_ecs_render.cpp  test_effect_model.cpp  test_effect_package.cpp  test_effect_registry.cpp  test_effect_registry_load.cpp  test_export_workflow.cpp  test_keyframe_evaluator.cpp  test_keyframe_utils.cpp  test_large_timeline_performance.cpp  test_lua_host.cpp  test_media_decoder.cpp  test_media_utils.cpp  test_missing_media.cpp  test_mod_engine.cpp  test_package_deploy.cpp  test_permission_manager.cpp  test_plugin_manifest.cpp  test_preset_manager.cpp  test_project_recovery.cpp  test_project_serializer.cpp  test_qml_composite_capture.cpp  test_selection_service.cpp  test_settings_manager.cpp  test_shader_compiler.cpp  test_timeline_batch_move.cpp  test_transition_effects.cpp  test_transport_service.cpp  test_triple_buffer.cpp  test_video_decoder.cpp  test_video_encoder.cpp  (+1 more)
ui/include/: commands.hpp  project_recovery_manager.hpp  project_service.hpp  selection_service.hpp  timeline_controller.hpp  timeline_export_manager.hpp  timeline_media_manager.hpp  timeline_service.hpp  timeline_types.hpp  transport_service.hpp  window_defaults.hpp  window_manager.hpp  workspace.hpp
ui/qml/: AboutWindow.qml  CompositeView.qml  ExportDialog.qml  MainWindow.qml  MixerWindow.qml  PackageManagerWindow.qml  PluginPermissionDialog.qml  ProjectLauncherWindow.qml  ProjectSettingsWindow.qml  SceneRenderer.qml  SceneSettingsWindow.qml  SettingDialog.qml  SystemSettingsWindow.qml  TimelineWindow.qml
ui/src/: project_recovery_manager.cpp  selection_service.cpp  timeline_controller.cpp  timeline_service.cpp  transport_service.cpp  window_manager.cpp  workspace.cpp
(+181 files in other folders)
